# webdriver-install

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
examples/: latest_chromedriver.rs  latest_geckodriver.rs
src/: chromedriver.rs  cli.rs  geckodriver.rs  installer.rs  lib.rs  main.rs
tests/: integration_test.rs
