[package]
authors = ["Philipp Hansch <dev@phansch.net>"]
edition = "2018"
name = "webdriver-install"
version = "0.1.0"

[lib]
name = "webdriver_install"
path = "src/lib.rs"

[[bin]]
name = "webdriver_install"
path = "src/main.rs"

[dependencies]
dirs = "*"
dirs-sys = "*"
eyre = "*"
flate2 = "*"
regex = "*"
sys-info = "*"
tar = "*"
zip = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"

[dependencies.winapi]
features = ["winuser"]
version = "0.3"

[dependencies.reqwest]
features = ["blocking"]
version = "0.11"

[dev-dependencies]
tempfile = "3.2"
