[package]
authors = ["Philipp Hansch <dev@phansch.net>"]
edition = "2018"
name = "webdriver-install"
description = "Fast and simple webdriver installation"
license = "MIT"
version = "0.1.1-alpha.2"

[lib]
name = "webdriver_install"
path = "src/lib.rs"

[[bin]]
name = "webdriver_install"
path = "src/main.rs"

[dependencies]
dirs = "3"
dirs-sys = "0.3"
eyre = "0.6"
flate2 = "1"
regex = "1"
sys-info = "0.7"
tar = "0.4"
zip = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"

[dependencies.winapi]
features = ["winuser"]
version = "0.3"

[dependencies.reqwest]
features = ["blocking"]
version = "0.11"

[dev-dependencies]
tempfile = "3.2"
